# soniq

./: Cargo.toml  README.md
examples/: simple_auth.rs  simple_user.rs
src/: auth.rs  client.rs  error.rs  lib.rs  sig.rs  utils.rs
src/endpoints/: mod.rs  user.rs
src/models/: common.rs  mod.rs  user.rs
tests/: auth_get_token.rs  user_get_friends.rs  user_get_info.rs  user_get_loved_tracks.rs
