[package]
name = "soniq"
version = "0.0.3"
authors = ["iku <iku@cleesim.com>"]
description = "A Rust library to interact with the Last.fm API."
documentation = "https://docs.rs/soniq"
homepage = "https://github.com/CleeSim/soniq"
repository = "https://github.com/CleeSim/soniq.git"
keywords = ["last", "fm", "api", "scrobble"]
license = "MIT"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
md5 = "0.8.0"
reqwest = { version = "0.12.20", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", default-features = false, features = [
    "rt",
    "macros",
] }
tracing = "0.1.41"
url = "2.5.4"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.45.1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }
